--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <p>喜欢您来</p>
     <a href="https://space.bilibili.com/365312025?spm_id_from=333.788.0.0">我的笔站主页</a>
-    <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=2&id=385387&auto=1&height=32"></iframe>
+<embed src=
+    "//music.163.com/style/swf/widget.swf?sid=385387&type=2&auto=1&width=278&height=32" width="298" height="52"  allowNetworking="all"
+    ></embed>    
 </body>
 </html>
