--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
     <p>喜欢您来</p>
     <a href="https://space.bilibili.com/365312025?spm_id_from=333.788.0.0">我的笔站主页</a>
-<embed src=
-    "//music.163.com/style/swf/widget.swf?sid=385387&type=2&auto=1&width=278&height=32" width="298" height="52"  allowNetworking="all"
-    ></embed>    
+<audio controls>
+    <source src="./music.mp3" type="audio/mpeg">
+    音乐播放失败
+</audio>   
 </body>
 </html>
