--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>小蛇面条网站</title>
 </head>
+
+    
 <body>
+    <h1>The party of my mind:</h1>
     <p>喜欢您来</p>
+    <h2>3d modeling project</h2>
     <a href="https://space.bilibili.com/365312025?spm_id_from=333.788.0.0">我的笔站主页</a>
 <audio controls>
     <source src="./music.mp3" type="audio/mpeg">
     音乐播放失败
+    <buttom>Click here to...</buttom>
+    <img src="./image.jpg">
 </audio>   
 </body>
 </html>
