--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
     <p>喜欢您来</p>
     <h2>3d modeling project</h2>
     <a href="https://space.bilibili.com/365312025?spm_id_from=333.788.0.0">我的笔站主页</a>
-<audio controls>
+<!--
+    <audio controls>
     <source src="./music.mp3" type="audio/mpeg">
     音乐播放失败
     <buttom>Click here to...</buttom>
-    <img src="./image.jpg">
-</audio>   
+    </audio>   
+ --->   
+     <img src="./image.jpg">
+    
+<embed src="//music.163.com/style/swf/widget.swf?sid=385387&type=2&auto=1&width=278&height=32" 
+    width="298" height="52"  allowNetworking="all"></embed>
+
 </body>
 </html>
