--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     
 <embed src="//music.163.com/style/swf/widget.swf?sid=385387&type=2&auto=1&width=278&height=32" 
     width="298" height="52"  allowNetworking="all"></embed>
-
+    <form>
+        <input type="text" id="box1">
+        <label for="box1"> sign in </label>
+    </form>
 </body>
 </html>
