--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     
 <body>
-    <h1>The party of my mind:</h1>
+    <h1>Hithere</h1>
     <p>喜欢您来</p>
     <h2>3d modeling project</h2>
     <a href="https://space.bilibili.com/365312025?spm_id_from=333.788.0.0">我的笔站主页</a>
