--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>小蛇面条网站</title>
+    <title>Fresh, fast, salmon</title>
 </head>
+<body>
+     <img src="./image.jpg">
+
+    <h1>Porfolio</h1>
+    <p></p>
+<!--__________________________________project1 below___________________________________________________________________ -->
+    <h2>Board game</h2>
+<!-- _________________________________project2 below____________________________________________________________________-->
+    <h2>3d modeling</h2>
+<!-- _________________________________project3 below____________________________________________________________________-->
+    <h2>Character design</h2>
+<!-- _________________________________project4 below____________________________________________________________________-->
+    <h2>Digital game</h2>
+    <a href=“https://waxwing0.itch.io/fbc”> Flesh, Blood，& Concrete</a>
+
+
 
     
-<body>
-    <h1>Porfolio</h1>
-    <p>喜欢您来</p>
-    <h2> project1:</h2>
-    <a href="https://space.bilibili.com/365312025?spm_id_from=333.788.0.0">我的笔站主页</a>
+    <a href="https://space.bilibili.com/365312025?spm_id_from=333.788.0.0">Bilibili</a>
 <!--
     <audio controls>
     <source src="./music.mp3" type="audio/mpeg">
@@ -19,7 +31,6 @@
     <buttom>Click here to...</buttom>
     </audio>   
  --->   
-     <img src="./image.jpg">
     
 <embed src="//music.163.com/style/swf/widget.swf?sid=385387&type=2&auto=1&width=278&height=32" 
     width="298" height="52"  allowNetworking="all"></embed>
