--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fresh, fast, salmon</title>
 </head>
-<body>
-     <img src="./image.jpg">
+<body style="background-color:powderblue;">
+     <img src="./image.jpg" align="left" alt="Fresh Salmon" width="500">
 
     <h1>Porfolio</h1>
     <p></p>
