--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fresh, fast, salmon</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-color:powderblue;">
+<body style="background-color:Thistle;">
      <img src="./image.jpg" align="left" alt="Fresh Salmon" width="500">
 
-    <h1>Porfolio</h1>
+    <h1 style="color:blue;" style="font-family:verdana;" style="font-size:300%;" style="font-size:300%;">Portfolio</h1>
     <p></p>
 <!--__________________________________project1 below___________________________________________________________________ -->
     <h2>Board game</h2>
@@ -20,10 +21,6 @@
     <h2>Digital game</h2>
     <a href=“https://waxwing0.itch.io/fbc”> Flesh, Blood，& Concrete</a>
 
-
-
-    
-    <a href="https://space.bilibili.com/365312025?spm_id_from=333.788.0.0">Bilibili</a>
 <!--
     <audio controls>
     <source src="./music.mp3" type="audio/mpeg">
