--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Fresh, fast, salmon</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-color:Thistle;">
+<body>
      <img src="./image.jpg" align="left" alt="Fresh Salmon" width="500">
 
-    <h1 style="color:blue;" style="font-family:verdana;" style="font-size:300%;" style="font-size:300%;">Portfolio</h1>
+    <h1>Portfolio</h1>
     <p></p>
 <!--__________________________________project1 below___________________________________________________________________ -->
     <h2>Board game</h2>
