--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fresh, fast, salmon</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,9 +12,11 @@
     <h1>Portfolio</h1>
     <p></p>
 <!--__________________________________project1 below___________________________________________________________________ -->
-    <h2>Board game</h2>
+    <h2>1888</h2>
+    <a href="https://youtu.be/mznRV9xXm0g?si=7bKhZxxLaxCedkAL"> Video</a>
 <!-- _________________________________project2 below____________________________________________________________________-->
     <h2>3d modeling</h2>
+    <a href="https://youtu.be/44LIvvbIE10?si=Ogm-4ogpmPyNtXa3"> Video</a>
 <!-- _________________________________project3 below____________________________________________________________________-->
     <h2>Character design</h2>
 <!-- _________________________________project4 below____________________________________________________________________-->
