--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <h1>Portfolio</h1>
     <p></p>
 <!--__________________________________project1 below___________________________________________________________________ -->
-    <h2>1888</h2>
-    <a href="https://youtu.be/mznRV9xXm0g?si=7bKhZxxLaxCedkAL"> Video</a>
+    <h2>board game</h2>
+    <a href=   > Video</a>
 <!-- _________________________________project2 below____________________________________________________________________-->
     <h2>3d modeling</h2>
     <a href="https://youtu.be/44LIvvbIE10?si=Ogm-4ogpmPyNtXa3"> Video</a>
 <!-- _________________________________project3 below____________________________________________________________________-->
-    <h2>Character design</h2>
+    <h2>character design</h2>
 <!-- _________________________________project4 below____________________________________________________________________-->
-    <h2>Digital game</h2>
-    <a href=“https://waxwing0.itch.io/fbc”> Flesh, Blood，& Concrete</a>
+    <h2>digital game</h2>
+    <a href=    > Flesh, Blood，& Concrete</a>
 
 <!--
     <audio controls>
