--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             </div>
 
             <div style="margin: 24px 0;">
-                <embed src="//music.163.com/style/swf/widget.swf?sid=385387&type=2&auto=1&width=278&height=32" 
-                    width="298" height="52" allowNetworking="all"></embed>
+                <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=2149887904&auto=1&height=66"></iframe>
             </div>
 
         </div>
     </div>
 </body>
 </html>
+
 
