--- a/index.html
+++ b/index.html
@@ -1,29 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>★</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <title>website of ray</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <div style="display: flex; align-items: flex-start;">
-        <img src="./image.jpg" alt="Fresh Salmon" width="500" style="margin-right: 32px;">
 
-        <div style="flex: 1;">
-            <div style="display: flex; align-items: center; gap: 20px;">
-                <h1 style="margin: 0;">★</h1>
-                <a href="/resume" style="font-size: 1.5em; text-decoration: underline; color: #0070f3; cursor: pointer;">resume</a>
-            </div>
+<canvas id="world"></canvas>
 
-            <div style="margin: 24px 0;">
-                <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=2149887904&auto=1&height=66"></iframe>
-            </div>
+<div id="hint">
+  Click or press any key to interact.<br>
+  Explore. Some nodes lead to projects.
+</div>
 
-        </div>
-    </div>
+<script src="js/main.js"></script>
 </body>
 </html>
-
-
